--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.9",
     "webpack": "^5.72.0",
