feat(setting): 增加版本属性

--- a/prod/manifest.json
+++ b/prod/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Gitlab bug issue report",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 3,
   "description": "A chromium extension to report bug issue to Gitlab",
   "icons": {
@@ -16,6 +16,9 @@
   ],
   "background": {
     "service_worker": "js/background.js"
-  }
+  },
+  "host_permissions": [
+    "https://*/"
+  ]
   
 }
