--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudogu/react-img-editor": "^0.4.0",
-    "@fluentui/react": "^8.67.1",
+    "@fluentui/react": "^8.109.0",
     "@fluentui/react-hooks": "^8.5.4",
     "@types/chrome": "^0.0.183",
     "@types/react": "^18.0.8",
@@ -28,5 +28,9 @@
     "ts-loader": "^9.2.9",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@fluentui/font-icons-mdl2": "^8.5.11",
+    "@fluentui/react-file-type-icons": "^8.8.11"
   }
 }
