--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "hanyuzhou2006@163.com",
   "license": "ISC",
   "devDependencies": {
-    "@cloudogu/react-img-editor": "^0.4.0",
     "@fluentui/react": "^8.125.3",
     "@fluentui/react-hooks": "^8.5.4",
+    "@sansitech/react-img-editor": "^0.4.1",
     "@types/chrome": "^0.0.183",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
@@ -21,12 +21,18 @@
     "esbuild-loader": "^2.18.0",
     "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.9",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@fluentui/react-components": "^9.72.9"
   }
 }
